Подготовил контроллеры для опроса студентов + layout + index view + css animation

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,1 +1,8 @@
+@import "../bower/bootstrap/less/bootstrap";
+@import "../bower/bootswatch/paper/variables";
+@import "../bower/bootswatch/paper/bootswatch";
+@import (inline) "../bower/animate.css/animate.css";
 
+.container.animate {
+  display: none;
+}
