Поменял схему роутинга и авторизации пользователей.

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -40,6 +40,13 @@ textarea {
     right: 0;
     bottom: 15px;
   }
+
+  .statistics {
+    .small;
+    position: absolute;
+    right: 15px;
+    top: 0;
+  }
 }
 
 .quuestionnaire {
