--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -29,12 +29,14 @@ header {
 }
 
 footer {
+  &::before {
+    &:extend(hr);
+    content: ' ';
+    display: block;
+    margin-bottom: @line-height-computed / 2;
+  }
   .text-center;
-  margin-top:    @line-height-computed;
-  padding-top: @line-height-computed / 2;
   margin-bottom: @line-height-computed / 2;
-  border: 0;
-  border-top: 1px solid @hr-border;
 }
 
 .container.animate {
